[gd_scene load_steps=2 format=3 uid="uid://crafting_panel_ui"]

[ext_resource type="Script" path="res://ui/crafting_panel.gd" id="1_script"]

[node name="CraftingPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2

[node name="Title" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "FORGE"
horizontal_alignment = 1

[node name="MaterialSlots" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2
alignment = 1

[node name="WeaponLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "Weapon Type:"

[node name="WeaponType" type="OptionButton" parent="Panel/VBox"]
layout_mode = 2

[node name="CraftButton" type="Button" parent="Panel/VBox"]
layout_mode = 2
text = "Select 2+ Materials"
disabled = true

[node name="ProgressBar" type="ProgressBar" parent="Panel/VBox"]
layout_mode = 2
value = 0.0

[node name="StatusLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "Enter forge zone to craft"
horizontal_alignment = 1
